[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/gui/merchant/MerchantContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gui/merchant/sellContainer/SellTabContainer.gd" type="Script" id=3]
[ext_resource path="res://assets/interface/inventory/default_inventory_background.png" type="Texture" id=4]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/font/Schrödinger.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/gui/merchant/Merchant.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[node name="Merchant" type="Node2D"]
position = Vector2( -32, 0 )
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
margin_left = 40.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 264.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MerchantName" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 8.0
margin_right = 100.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Comerciante"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemInfo" type="Node2D" parent="."]
position = Vector2( -32, 32 )
z_index = 2

[node name="Background" type="ColorRect" parent="ItemInfo"]
margin_left = -128.0
margin_right = -8.0
margin_bottom = 144.0
color = Color( 0.976471, 0.992157, 0.713726, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="ItemInfo/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -68.0
margin_right = 60.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Espada de hierro
--------------------
Calidad:
Valor: "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="ItemInfo"]
margin_left = -256.0
margin_right = -136.0
margin_bottom = 144.0
color = Color( 0.976471, 0.992157, 0.713726, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comparison" type="Label" parent="ItemInfo/Background2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -72.0
margin_right = 60.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Comparacion

Espada de hierro
--------------------
Calidad:
Valor: "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Node2D" parent="."]
position = Vector2( 40, 8 )

[node name="Greetings" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 16.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 81.0
text = "Bienvenido, hecha un
vistazo a mis productos."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBuy" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 136.0
text = "Comprar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainSell" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 160.0
margin_right = 184.0
margin_bottom = 184.0
text = "Vender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainExit" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 208.0
margin_right = 184.0
margin_bottom = 232.0
text = "Irse"

[node name="BuyMenu" type="Node2D" parent="."]
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="BuyMenu"]
margin_left = 48.0
margin_top = 56.0
margin_right = 248.0
margin_bottom = 224.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BuyMenu/ScrollContainer"]
margin_right = 131.0
margin_bottom = 196.0
mouse_filter = 2

[node name="MerchantContainer" parent="BuyMenu/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 131.0
margin_bottom = 36.0

[node name="MerchantContainer2" parent="BuyMenu/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 40.0
margin_right = 131.0
margin_bottom = 76.0
itemName = "Brown Shirt"

[node name="MerchantContainer3" parent="BuyMenu/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 131.0
margin_bottom = 116.0
itemName = "Blue Jeans"

[node name="MerchantContainer4" parent="BuyMenu/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 120.0
margin_right = 131.0
margin_bottom = 156.0
itemName = "Health Potion"

[node name="MerchantContainer5" parent="BuyMenu/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 160.0
margin_right = 131.0
margin_bottom = 196.0
itemName = "Mana Potion"

[node name="ConfirmBuy" type="Button" parent="BuyMenu"]
margin_left = 160.0
margin_top = 232.0
margin_right = 248.0
margin_bottom = 256.0
text = "Comprar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBuy" type="Button" parent="BuyMenu"]
margin_left = 48.0
margin_top = 232.0
margin_right = 136.0
margin_bottom = 256.0
text = "Volver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyLabel" type="Label" parent="BuyMenu"]
margin_left = 112.0
margin_top = 32.0
margin_right = 185.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
text = "Comprar"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellMenu" type="Node2D" parent="."]
visible = false

[node name="SellLabel" type="Label" parent="SellMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
text = "Vender mis cosas"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmSell" type="Button" parent="SellMenu"]
margin_left = 160.0
margin_top = 232.0
margin_right = 248.0
margin_bottom = 256.0
text = "Vender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackSell" type="Button" parent="SellMenu"]
margin_left = 48.0
margin_top = 232.0
margin_right = 136.0
margin_bottom = 256.0
text = "Volver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellTabContainer" type="TabContainer" parent="SellMenu"]
margin_left = 48.0
margin_top = 56.0
margin_right = 248.0
margin_bottom = 224.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Tabs" parent="SellMenu/SellTabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 4 )

[node name="InventoryLabel" type="Label" parent="SellMenu/SellTabContainer/Inventory"]
margin_left = 12.0
margin_top = -8.0
margin_right = 180.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 5 )
text = "Mochila
--------------------"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SellMenu/SellTabContainer/Inventory"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SellMenu/SellTabContainer/Inventory/ScrollContainer"]

[node name="E" type="Tabs" parent="SellMenu/SellTabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EquipmentLabel" type="Label" parent="SellMenu/SellTabContainer/E"]
margin_top = -8.0
margin_right = 192.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
text = "Equipamento
--------------------"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SellMenu/SellTabContainer/E"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SellMenu/SellTabContainer/E/ScrollContainer"]

[node name="B" type="Tabs" parent="SellMenu/SellTabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HotbarLabel" type="Label" parent="SellMenu/SellTabContainer/B"]
margin_top = -8.0
margin_right = 192.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 7 )
text = "Barra de acción
--------------------"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SellMenu/SellTabContainer/B/HotbarLabel"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 136.0

[node name="VBoxContainer" type="VBoxContainer" parent="SellMenu/SellTabContainer/B/HotbarLabel/ScrollContainer"]

[node name="ItemInfo" type="Node2D" parent="SellMenu/SellTabContainer"]
position = Vector2( -80, -24 )
z_index = 2

[node name="Background" type="ColorRect" parent="SellMenu/SellTabContainer/ItemInfo"]
margin_left = -128.0
margin_right = -8.0
margin_bottom = 144.0
color = Color( 0.976471, 0.992157, 0.713726, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="SellMenu/SellTabContainer/ItemInfo/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -68.0
margin_right = 60.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Espada de hierro
--------------------
Calidad:
Valor: "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="SellMenu/SellTabContainer/ItemInfo"]
margin_left = -256.0
margin_right = -136.0
margin_bottom = 144.0
color = Color( 0.976471, 0.992157, 0.713726, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comparison" type="Label" parent="SellMenu/SellTabContainer/ItemInfo/Background2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -72.0
margin_right = 60.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Comparacion

Espada de hierro
--------------------
Calidad:
Valor: "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenu/MainBuy" to="." method="_on_MainBuy_pressed"]
[connection signal="pressed" from="MainMenu/MainSell" to="." method="_on_MainSell_pressed"]
[connection signal="pressed" from="MainMenu/MainExit" to="." method="_on_MainExit_pressed"]
[connection signal="pressed" from="BuyMenu/ConfirmBuy" to="." method="_on_ConfirmBuy_pressed"]
[connection signal="pressed" from="BuyMenu/BackBuy" to="." method="_on_BackBuy_pressed"]
[connection signal="pressed" from="SellMenu/ConfirmSell" to="SellMenu/SellTabContainer" method="_on_ConfirmSell_pressed"]
[connection signal="pressed" from="SellMenu/BackSell" to="." method="_on_BackSell_pressed"]
